[gd_scene load_steps=2 format=3 uid="uid://vkm0nbchvlya"]

[ext_resource type="Script" uid="uid://dger02p5paldi" path="res://src/ui/account_management/_common/back_continue.gd" id="1_lep28"]

[node name="BackContinue" type="HBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -73.0
offset_right = -38.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_lep28")

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 54)
layout_mode = 2
text = "Back"

[node name="Separator" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 54)
layout_mode = 2
text = "Continue"
